Started to add testdrive file

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "feathers"
   ],
   "author": {
-    "name": "apac",
-    "email": "apac"
+    "name": "apacrathon",
+    "email": "apacrathon@gmail.com"
   },
   "contributors": [],
   "bugs": {},
