--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "feathers-socketio": "^2.0.0",
     "helmet": "^3.9.0",
     "mysql": "^2.15.0",
+    "mysql2": "^1.4.2",
     "serve-favicon": "^2.4.5",
     "winston": "^2.4.0"
   },
