Updated feathers-sequelize to 2.4.0

--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "feathers-hooks": "^2.1.1",
     "feathers-hooks-common": "^3.10.0",
     "feathers-rest": "^1.8.0",
-    "feathers-sequelize": "^2.3.2",
+    "feathers-sequelize": "^2.4.0",
     "feathers-socketio": "^2.0.0",
     "helmet": "^3.9.0",
     "mysql": "^2.15.0",
+    "mysql2": "^1.4.2",
+    "sequelize": "^4.22.5",
     "serve-favicon": "^2.4.5",
+    "socket.io": "^2.0.4",
     "winston": "^2.4.0"
   },
   "devDependencies": {
